infrastructure/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orderapp
  labels:
    name: orderapp
    environment: production
